--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
+    "ejs": "^2.5.6",
+    "ejs-mate": "^2.3.0",
     "emailjs": "^1.0.11",
     "express": "^4.13.4",
+    "express-messages": "^1.0.1",
     "express-session": "^1.15.4",
     "helmet": "^2.3.0",
     "jade": "^1.11.0",
